--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -1142,12 +1142,12 @@ requestAnimationFrame(() => {
   }
 
   updateHUD();
-  // PREMIUM PACK — auto scroll to center outcome on mobile
+  /* PREMIUM PACK — auto scroll to center outcome on mobile
 setTimeout(() => {
   const rect = elOutcomeWrap.getBoundingClientRect();
   const desired = window.pageYOffset + rect.top - 80; 
   window.scrollTo({ top: desired, behavior: 'smooth' });
-}, 220);
+}, 220); */
 }
 
 /* ========= Flow ========= */
