--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -412,7 +412,7 @@
   white-space: normal;
 }
 
-/* ⚡ Lightning for Bold */
+/* ⚡ Lightning for Bold 
 .path-title.bold::before {
   content: "⚡️";
   font-size: 26px;
@@ -430,7 +430,7 @@
   left: -38px;
   top: 3px;
   opacity: .9;
-}
+} */
 
 /* Cinematic gradient underline */
 .path-title::after {
