--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -412,7 +412,25 @@
   white-space: normal;
 }
 
+/* ⚡ Lightning for Bold 
+.path-title.bold::before {
+  content: "⚡️";
+  font-size: 26px;
+  position: absolute;
+  left: -38px;
+  top: 2px;
+  opacity: .9;
+}
 
+/* 🛡️ Shield for Conservative */
+.path-title.cons::before {
+  content: "🛡️";
+  font-size: 23px;
+  position: absolute;
+  left: -38px;
+  top: 3px;
+  opacity: .9;
+} */
 
 /* Cinematic gradient underline */
 .path-title::after {
@@ -1135,57 +1153,60 @@ function applyOutcome(isFavourable, mult, text, scenario){
 function showOutcome(isFavourable, mult, text, scenario, oldMC, newMC){
   hasOutcomeShown = true;
 
-  // Hide the main scenario header during outcome
+  // Hide scenario header
   elTitle.classList.add('vanish');
   elDesc.classList.add('vanish');
   elCard.classList.add('outcome-mode');
-  // Premium glow depending on choice
-if (chosenPath === 'bold') {
-  elCard.classList.add('bold');
-  elCard.classList.remove('cons');
-} else {
-  elCard.classList.add('cons');
-  elCard.classList.remove('bold');
-}
 
-  // Hide panel completely so it doesn't reserve vertical space
+  // Premium glow depending on choice
+  if (chosenPath === 'bold') {
+    elCard.classList.add('bold');
+    elCard.classList.remove('cons');
+  } else {
+    elCard.classList.add('cons');
+    elCard.classList.remove('bold');
+  }
+
+  // Hide panel completely
   elControls.style.opacity = 0;
   elControls.style.display = 'none';
 
+  // BUILD OUTCOME HEADER (NO ICONS — CSS WILL HANDLE ICONS)
   elBigMsg.className = 'bigMsg ' + (isFavourable ? 'good' : 'bad');
-  const line1 = chosenPath === 'bold' ? 'Bold move' : 'Conservative move';
-  const line2 = isFavourable ? 'Favourable outcome' : 'Unfavourable outcome';
-  elBigMsg.innerHTML = `
-  <div class="outcome-title ${chosenPath}">
-    ${
-      chosenPath === 'bold'
-        ? '<span class="icon-bold">⚡</span> Bold Path'
-        : '<span class="icon-cons">🛡️</span> Conservative Path'
-    }
-  </div>
-  <div class="outcome-sub ${isFavourable ? 'good' : 'bad'}">
-    ${isFavourable ? 'Favourable Outcome' : 'Unfavourable Outcome'}
-  </div>
-  <div class="outcome-desc">
-    ${text}
-  </div>
-`;
 
+  elBigMsg.innerHTML = `
+    <div class="outcome-title ${chosenPath}">
+      ${chosenPath === 'bold' ? 'Bold Path' : 'Conservative Path'}
+    </div>
+    <div class="outcome-sub ${isFavourable ? 'good' : 'bad'}">
+      ${isFavourable ? 'Favourable Outcome' : 'Unfavourable Outcome'}
+    </div>
+    <div class="outcome-desc">${text}</div>
+  `;
+
+  // Show outcome wrapper
   elOutcomeWrap.style.display = 'block';
-  // PREMIUM PACK — animate outcome wrap
-requestAnimationFrame(() => {
-  elOutcomeWrap.classList.add('show');
-});
+
+  // Premium FX
+  requestAnimationFrame(() => {
+    elOutcomeWrap.classList.add('show');
+  });
+
+  // Outcome box
   const cls = isFavourable ? 'goodBox' : 'badBox';
   elOutcomeBox.className = 'outcome ' + cls;
 
-  // percentage purely from multiplier (5.0× -> ±500%)
+  // multiplier → percentage
   const pctAbs = mult * 100;
   const pctStr = (isFavourable ? '+' : '-') + pctAbs.toFixed(0) + '%';
 
-  const priceLine = `Price: <b>${fmtUSD(oldMC/SUPPLY,8)}</b> → <b>${fmtUSD(price,8)}</b>`;
-  const mcLine = `Market Cap: <b>${fmtUSD(oldMC)}</b> → <b>${fmtUSD(newMC)}</b>`;
-  const focusLine = scenario ? `<div class="muted" style="margin-top:10px;">${scenario.focus || ''}</div>` : '';
+  const priceLine =
+    `Price: <b>${fmtUSD(oldMC/SUPPLY,8)}</b> → <b>${fmtUSD(price,8)}</b>`;
+  const mcLine =
+    `Market Cap: <b>${fmtUSD(oldMC)}</b> → <b>${fmtUSD(newMC)}</b>`;
+  const focusLine = scenario
+    ? `<div class="muted" style="margin-top:10px;">${scenario.focus || ''}</div>`
+    : '';
 
   elOutcomeBox.innerHTML = `
     <div class="big">${isFavourable ? 'Gain' : 'Loss'} &nbsp; (${pctStr})</div>
@@ -1194,6 +1215,7 @@ requestAnimationFrame(() => {
     ${focusLine}
   `;
 
+  // Restart vs next day
   if (price <= 0){
     elNext.style.display = 'none';
     elRestart.style.display = 'inline-block';
@@ -1203,6 +1225,7 @@ requestAnimationFrame(() => {
   }
 
   updateHUD();
+}
   /* PREMIUM PACK — auto scroll to center outcome on mobile
 setTimeout(() => {
   const rect = elOutcomeWrap.getBoundingClientRect();
