--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -1153,60 +1153,57 @@ function applyOutcome(isFavourable, mult, text, scenario){
 function showOutcome(isFavourable, mult, text, scenario, oldMC, newMC){
   hasOutcomeShown = true;
 
-  // Hide scenario header
+  // Hide the main scenario header during outcome
   elTitle.classList.add('vanish');
   elDesc.classList.add('vanish');
   elCard.classList.add('outcome-mode');
-
   // Premium glow depending on choice
-  if (chosenPath === 'bold') {
-    elCard.classList.add('bold');
-    elCard.classList.remove('cons');
-  } else {
-    elCard.classList.add('cons');
-    elCard.classList.remove('bold');
-  }
+if (chosenPath === 'bold') {
+  elCard.classList.add('bold');
+  elCard.classList.remove('cons');
+} else {
+  elCard.classList.add('cons');
+  elCard.classList.remove('bold');
+}
 
-  // Hide panel completely
+  // Hide panel completely so it doesn't reserve vertical space
   elControls.style.opacity = 0;
   elControls.style.display = 'none';
 
-  // BUILD OUTCOME HEADER (NO ICONS — CSS WILL HANDLE ICONS)
   elBigMsg.className = 'bigMsg ' + (isFavourable ? 'good' : 'bad');
-
+  const line1 = chosenPath === 'bold' ? 'Bold move' : 'Conservative move';
+  const line2 = isFavourable ? 'Favourable outcome' : 'Unfavourable outcome';
   elBigMsg.innerHTML = `
-    <div class="outcome-title ${chosenPath}">
-      ${chosenPath === 'bold' ? 'Bold Path' : 'Conservative Path'}
-    </div>
-    <div class="outcome-sub ${isFavourable ? 'good' : 'bad'}">
-      ${isFavourable ? 'Favourable Outcome' : 'Unfavourable Outcome'}
-    </div>
-    <div class="outcome-desc">${text}</div>
-  `;
+  <div class="outcome-title ${chosenPath}">
+    ${
+      chosenPath === 'bold'
+        ? '<span class="icon-bold">⚡</span> Bold Path'
+        : '<span class="icon-cons">🛡️</span> Conservative Path'
+    }
+  </div>
+  <div class="outcome-sub ${isFavourable ? 'good' : 'bad'}">
+    ${isFavourable ? 'Favourable Outcome' : 'Unfavourable Outcome'}
+  </div>
+  <div class="outcome-desc">
+    ${text}
+  </div>
+`;
 
-  // Show outcome wrapper
   elOutcomeWrap.style.display = 'block';
-
-  // Premium FX
-  requestAnimationFrame(() => {
-    elOutcomeWrap.classList.add('show');
-  });
-
-  // Outcome box
+  // PREMIUM PACK — animate outcome wrap
+requestAnimationFrame(() => {
+  elOutcomeWrap.classList.add('show');
+});
   const cls = isFavourable ? 'goodBox' : 'badBox';
   elOutcomeBox.className = 'outcome ' + cls;
 
-  // multiplier → percentage
+  // percentage purely from multiplier (5.0× -> ±500%)
   const pctAbs = mult * 100;
   const pctStr = (isFavourable ? '+' : '-') + pctAbs.toFixed(0) + '%';
 
-  const priceLine =
-  `Price: <b>${fmtUSD(oldMC/SUPPLY,8)}</b> → <b>${fmtUSD(newMC/SUPPLY,8)}</b>`;
-  const mcLine =
-    `Market Cap: <b>${fmtUSD(oldMC)}</b> → <b>${fmtUSD(newMC)}</b>`;
-  const focusLine = scenario
-    ? `<div class="muted" style="margin-top:10px;">${scenario.focus || ''}</div>`
-    : '';
+  const priceLine = `Price: <b>${fmtUSD(oldMC/SUPPLY,8)}</b> → <b>${fmtUSD(price,8)}</b>`;
+  const mcLine = `Market Cap: <b>${fmtUSD(oldMC)}</b> → <b>${fmtUSD(newMC)}</b>`;
+  const focusLine = scenario ? `<div class="muted" style="margin-top:10px;">${scenario.focus || ''}</div>` : '';
 
   elOutcomeBox.innerHTML = `
     <div class="big">${isFavourable ? 'Gain' : 'Loss'} &nbsp; (${pctStr})</div>
@@ -1215,7 +1212,6 @@ function showOutcome(isFavourable, mult, text, scenario, oldMC, newMC){
     ${focusLine}
   `;
 
-  // Restart vs next day
   if (price <= 0){
     elNext.style.display = 'none';
     elRestart.style.display = 'inline-block';
@@ -1225,7 +1221,7 @@ function showOutcome(isFavourable, mult, text, scenario, oldMC, newMC){
   }
 
   updateHUD();
-}
+
   /* PREMIUM PACK — auto scroll to center outcome on mobile
 setTimeout(() => {
   const rect = elOutcomeWrap.getBoundingClientRect();
