--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -1157,43 +1157,41 @@ function showOutcome(isFavourable, mult, text, scenario, oldMC, newMC){
   elTitle.classList.add('vanish');
   elDesc.classList.add('vanish');
   elCard.classList.add('outcome-mode');
+
   // Premium glow depending on choice
-if (chosenPath === 'bold') {
-  elCard.classList.add('bold');
-  elCard.classList.remove('cons');
-} else {
-  elCard.classList.add('cons');
-  elCard.classList.remove('bold');
-}
+  if (chosenPath === 'bold') {
+    elCard.classList.add('bold');
+    elCard.classList.remove('cons');
+  } else {
+    elCard.classList.add('cons');
+    elCard.classList.remove('bold');
+  }
 
   // Hide panel completely so it doesn't reserve vertical space
   elControls.style.opacity = 0;
   elControls.style.display = 'none';
 
+  // Build outcome header (no inline icons – CSS handles them)
   elBigMsg.className = 'bigMsg ' + (isFavourable ? 'good' : 'bad');
-  const line1 = chosenPath === 'bold' ? 'Bold move' : 'Conservative move';
-  const line2 = isFavourable ? 'Favourable outcome' : 'Unfavourable outcome';
-  elBigMsg.innerHTML = `
-  <div class="outcome-title ${chosenPath}">
-    ${
-      chosenPath === 'bold'
-        ? '<span class="icon-bold">⚡</span> Bold Path'
-        : '<span class="icon-cons">🛡️</span> Conservative Path'
-    }
-  </div>
-  <div class="outcome-sub ${isFavourable ? 'good' : 'bad'}">
-    ${isFavourable ? 'Favourable Outcome' : 'Unfavourable Outcome'}
-  </div>
-  <div class="outcome-desc">
-    ${text}
-  </div>
-`;
 
+  elBigMsg.innerHTML = `
+    <div class="outcome-title ${chosenPath}">
+      ${chosenPath === 'bold' ? 'Bold Path' : 'Conservative Path'}
+    </div>
+    <div class="outcome-sub ${isFavourable ? 'good' : 'bad'}">
+      ${isFavourable ? 'Favourable Outcome' : 'Unfavourable Outcome'}
+    </div>
+    <div class="outcome-desc">${text}</div>
+  `;
+
+  // Show outcome wrapper
   elOutcomeWrap.style.display = 'block';
+
   // PREMIUM PACK — animate outcome wrap
-requestAnimationFrame(() => {
-  elOutcomeWrap.classList.add('show');
-});
+  requestAnimationFrame(() => {
+    elOutcomeWrap.classList.add('show');
+  });
+
   const cls = isFavourable ? 'goodBox' : 'badBox';
   elOutcomeBox.className = 'outcome ' + cls;
 
@@ -1203,7 +1201,9 @@ requestAnimationFrame(() => {
 
   const priceLine = `Price: <b>${fmtUSD(oldMC/SUPPLY,8)}</b> → <b>${fmtUSD(price,8)}</b>`;
   const mcLine = `Market Cap: <b>${fmtUSD(oldMC)}</b> → <b>${fmtUSD(newMC)}</b>`;
-  const focusLine = scenario ? `<div class="muted" style="margin-top:10px;">${scenario.focus || ''}</div>` : '';
+  const focusLine = scenario
+    ? `<div class="muted" style="margin-top:10px;">${scenario.focus || ''}</div>`
+    : '';
 
   elOutcomeBox.innerHTML = `
     <div class="big">${isFavourable ? 'Gain' : 'Loss'} &nbsp; (${pctStr})</div>
