--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -1158,7 +1158,7 @@ function showOutcome(isFavourable, mult, text, scenario, oldMC, newMC){
   elDesc.classList.add('vanish');
   elCard.classList.add('outcome-mode');
 
-  // Premium glow depending on choice
+  // Apply glow mode
   if (chosenPath === 'bold') {
     elCard.classList.add('bold');
     elCard.classList.remove('cons');
@@ -1167,51 +1167,48 @@ function showOutcome(isFavourable, mult, text, scenario, oldMC, newMC){
     elCard.classList.remove('bold');
   }
 
-  // Hide panel completely so it doesn't reserve vertical space
+  // Hide choice controls
   elControls.style.opacity = 0;
   elControls.style.display = 'none';
 
-  // Build outcome header (no inline icons – CSS handles them)
-  elBigMsg.className = 'bigMsg ' + (isFavourable ? 'good' : 'bad');
+  // TITLE + SUBTITLE + DESCRIPTION (no icons here)
+  const titleText = chosenPath === 'bold' ? 'Bold Path' : 'Conservative Path';
+  const subText = isFavourable ? 'Favourable Outcome' : 'Unfavourable Outcome';
 
+  elBigMsg.className = 'bigMsg ' + (isFavourable ? 'good' : 'bad');
   elBigMsg.innerHTML = `
-    <div class="outcome-title ${chosenPath}">
-      ${chosenPath === 'bold' ? 'Bold Path' : 'Conservative Path'}
-    </div>
-    <div class="outcome-sub ${isFavourable ? 'good' : 'bad'}">
-      ${isFavourable ? 'Favourable Outcome' : 'Unfavourable Outcome'}
-    </div>
-    <div class="outcome-desc">${text}</div>
+      <div class="outcome-title ${chosenPath}">${titleText}</div>
+      <div class="outcome-sub ${isFavourable ? 'good' : 'bad'}">${subText}</div>
+      <div class="outcome-desc">${text}</div>
   `;
 
-  // Show outcome wrapper
+  // Show wrapper + animate
   elOutcomeWrap.style.display = 'block';
+  requestAnimationFrame(() => elOutcomeWrap.classList.add('show'));
 
-  // PREMIUM PACK — animate outcome wrap
-  requestAnimationFrame(() => {
-    elOutcomeWrap.classList.add('show');
-  });
+  // Outcome box (gain/loss)
+  const pct = (mult * 100).toFixed(0);
+  const pctStr = (isFavourable ? '+' : '-') + pct + '%';
 
-  const cls = isFavourable ? 'goodBox' : 'badBox';
-  elOutcomeBox.className = 'outcome ' + cls;
+  const priceLine =
+    `Price: <b>${fmtUSD(oldMC/SUPPLY,8)}</b> → <b>${fmtUSD(price,8)}</b>`;
 
-  // percentage purely from multiplier (5.0× -> ±500%)
-  const pctAbs = mult * 100;
-  const pctStr = (isFavourable ? '+' : '-') + pctAbs.toFixed(0) + '%';
+  const mcLine =
+    `Market Cap: <b>${fmtUSD(oldMC)}</b> → <b>${fmtUSD(newMC)}</b>`;
 
-  const priceLine = `Price: <b>${fmtUSD(oldMC/SUPPLY,8)}</b> → <b>${fmtUSD(price,8)}</b>`;
-  const mcLine = `Market Cap: <b>${fmtUSD(oldMC)}</b> → <b>${fmtUSD(newMC)}</b>`;
-  const focusLine = scenario
-    ? `<div class="muted" style="margin-top:10px;">${scenario.focus || ''}</div>`
+  const focusLine = scenario && scenario.focus
+    ? `<div class="muted" style="margin-top:10px;">${scenario.focus}</div>`
     : '';
 
+  elOutcomeBox.className = 'outcome ' + (isFavourable ? 'goodBox' : 'badBox');
   elOutcomeBox.innerHTML = `
-    <div class="big">${isFavourable ? 'Gain' : 'Loss'} &nbsp; (${pctStr})</div>
-    <div>${priceLine}</div>
-    <div class="muted">${mcLine}</div>
-    ${focusLine}
-  `;
+        <div class="big">${isFavourable ? 'Gain' : 'Loss'} (${pctStr})</div>
+        <div>${priceLine}</div>
+        <div class="muted">${mcLine}</div>
+        ${focusLine}
+    `;
 
+  // Restart vs next day
   if (price <= 0){
     elNext.style.display = 'none';
     elRestart.style.display = 'inline-block';
