--- a/sandbox/cgtshop/cgtshop-v0.83.html
+++ b/sandbox/cgtshop/cgtshop-v0.83.html
@@ -1220,7 +1220,7 @@ requestAnimationFrame(() => {
     elRestart.style.display = 'none';
   }
 
-  updateHUD();”
+  updateHUD();
 }
   /* PREMIUM PACK — auto scroll to center outcome on mobile
 setTimeout(() => {
