--- a/sandbox/cgtshop/cgtshop-v0.84.html
+++ b/sandbox/cgtshop/cgtshop-v0.84.html
@@ -913,7 +913,11 @@ function getBandRange(subBand){
 
   // NEW: Slider now represents actual × multiplier.
   // 1.1x = +10%, 5.0x = +400%
-  return {min:1.1, max, step:0.1};
+  if (path === 'conservative') {
+    return { min: 0.10, max: 0.80, step: 0.01 };
+} else {
+    return { min: 1.1, max, step: 0.1 };
+}
 }
 
 /* ========= Slider rendering ========= */
