--- a/sandbox/cgtshop/cgtshop-v0.84.html
+++ b/sandbox/cgtshop/cgtshop-v0.84.html
@@ -900,7 +900,13 @@ async function maybeShowClueBlocking(){
 }
 
 /* ========= Bands → slider ranges ========= */
-function getBandRange(subBand){
+function getBandRange(subBand, path){
+  if (path === 'conservative') {
+    // Conservative slider: 0.10 → 0.80 in 0.01 slices
+    return { min: 0.10, max: 0.80, step: 0.01 };
+  }
+
+  // Bold slider still uses band-coded max values
   const parts = (subBand || '').split('-');
   const bandCode = parts[1] || '';
 
@@ -911,13 +917,7 @@ function getBandRange(subBand){
   else if (bandCode === 'B4') max = 2.0;
   else if (bandCode === 'B5') max = 1.0;
 
-  // NEW: Slider now represents actual × multiplier.
-  // 1.1x = +10%, 5.0x = +400%
-  if (path === 'conservative') {
-    return { min: 0.10, max: 0.80, step: 0.01 };
-} else {
-    return { min: 1.1, max, step: 0.1 };
-}
+  return { min: 1.1, max, step: 0.1 };
 }
 
 /* ========= Slider rendering ========= */
@@ -1110,10 +1110,8 @@ async function newScenario(){
   await sleep(250);
   elControls.style.opacity = 1;
 
-  const bandRange = getBandRange(s.subBand);
-
-  elConsBtn.onclick = () => choosePath('conservative', bandRange);
-  elBoldBtn.onclick = () => choosePath('bold', bandRange);
+  elConsBtn.onclick = () => choosePath('conservative', getBandRange(s.subBand, 'conservative'));
+elBoldBtn.onclick = () => choosePath('bold', getBandRange(s.subBand, 'bold'));
 }
 
 /* ========= Outcome logic ========= */
