--- a/sandbox/cgtshop/cgtshop-v0.84.html
+++ b/sandbox/cgtshop/cgtshop-v0.84.html
@@ -1128,66 +1128,62 @@ function resolveDecision(){
     return;
   }
 
-  const range = getBandRange(currentScenario.subBand);
+  const range = getBandRange(currentScenario.subBand, chosenPath);
   let mult = parseFloat(sliderInput.value || range.min);
   mult = Math.max(range.min, Math.min(range.max, mult));
 
   let isFavourable;
 
-/* ======================================================
-   FINAL PROBABILITY LOGIC — v0.84
-====================================================== */
-let isFavourable;
+  /* ======================================================
+     FINAL PROBABILITY LOGIC — v0.84
+  ====================================================== */
+  if (window.TEST_MODE === true) {
 
-if (window.TEST_MODE === true) {
-  // Test mode uses HUD slider only
-  isFavourable = Math.random() < (bias / 100);
-
-} else {
-
-  if (chosenPath === "conservative") {
-
-    /* -------------------------------
-       CONSERVATIVE — 8 slices (C1–C8)
-       Probabilities: 85 → 65
-       ------------------------------- */
-    const frac = (mult - 0.10) / 0.70;       // map 0.10–0.80 → 0–1
-    let slice = Math.floor(frac * 8);        // 0–7
-    slice = Math.max(0, Math.min(7, slice));
-
-    const consProbs = [85, 82, 79, 76, 73, 70, 68, 65];
-    const p = consProbs[slice] / 100;
-
-    isFavourable = Math.random() < p;
+    // Test mode — HUD slider only
+    isFavourable = Math.random() < (bias / 100);
 
   } else {
-    /* -------------------------------
-       BOLD — 39 slices (1.1 → 5.0)
-       Probabilities: 80 → 50
-       ------------------------------- */
-    const frac = (mult - 1.1) / (5.0 - 1.1);    // map 1.1–5.0 → 0–1
-    let slice = Math.floor(frac * 39);          // 0–38
-    slice = Math.max(0, Math.min(38, slice));
 
-    const boldStart = 80;
-    const boldEnd   = 50;
-    const step = (boldStart - boldEnd) / 38;
+    if (chosenPath === "conservative") {
 
-    const p = (boldStart - slice * step) / 100;
+      // Conservative: 0.10 → 0.80 mapped to 8 slices
+      const frac = (mult - 0.10) / 0.70;
+      let slice = Math.floor(frac * 8);
+      slice = Math.max(0, Math.min(7, slice));
 
-    isFavourable = Math.random() < p;
+      const consProbs = [85, 82, 79, 76, 73, 70, 68, 65];
+      const p = consProbs[slice] / 100;
+
+      isFavourable = Math.random() < p;
+
+    } else {
+
+      // Bold: 1.1 → 5.0 mapped to 39 slices (80% → 50%)
+      const frac = (mult - 1.1) / (5.0 - 1.1);
+      let slice = Math.floor(frac * 39);
+      slice = Math.max(0, Math.min(38, slice));
+
+      const boldStart = 80;
+      const boldEnd   = 50;
+      const step = (boldStart - boldEnd) / 38;
+
+      const p = (boldStart - slice * step) / 100;
+
+      isFavourable = Math.random() < p;
+    }
   }
-}
 
+  // Pick outcome text
   const s = currentScenario;
-
   let outcomeText = '';
+
   if (chosenPath === 'bold'){
     outcomeText = isFavourable ? (s.outcomeA || '') : (s.outcomeB || '');
   } else {
     outcomeText = isFavourable ? (s.outcomeC || '') : (s.outcomeD || '');
   }
 
+  // Run outcome
   applyOutcome(isFavourable, mult, outcomeText, s);
   locked = true;
 }
